--- a/src/components/WinOrLoseCard/index.css
+++ b/src/components/WinOrLoseCard/index.css
@@ -1,1 +1,35 @@
 /* Write your code here. */
+.result-bg-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.result-image {
+  width: 160px;
+}
+.result-heading {
+  color: #ffffff;
+  font-family: 'Roboto';
+}
+.result-score {
+  color: #ffffff;
+  font-family: 'Roboto';
+  font-size: 14px;
+  font-weight: 500;
+}
+.result {
+  color: #6a59ff;
+  font-size: 20px;
+}
+.play-again-btn {
+  border: none;
+  padding-right: 14px;
+  padding-left: 14px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  background-color: #ffce27;
+  border-radius: 10px;
+  color: #3d3d3d;
+  font-family: 'Roboto';
+  font-weight: 600;
+}
